<resources>
    <string name="app_name">New York Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search...</string>
    <string name="no_internet">No internet connection detected</string>
    <string name="sort_type">Sort By</string>
    <string name="news_desk">News Desk</string>
    <string name="search_start_date">Set Begin Date</string>
    <string name="search_end_date">Set End Date</string>
    <string name="set_filter">Set Filter</string>
    <string name="clear_filter">Clear Filter</string>

    <string name="all">All</string>
    <string name="sports">Sports</string>
    <string name="fashion">Fashion</string>

    <string-array name="sort_type_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <string-array name="news_desk_array">
        <item>All</item>
        <item>Arts</item>
        <item>Sports</item>
        <item>Fashion &amp; Style</item>
    </string-array>
</resources>
